# AI-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js  AuthContext.js  index.css  index.js
frontend/src/components/: AdminDashboard.js  Chat.js  ChatMessage.js  Login.js  PasswordReset.js  Signup.js
src/: main.py
src/config/: settings.py
src/core/: agent.py  graph.py  memory.py  tools.py
src/data/: embeddings.py  loader.py
src/data/faiss_index/: index.faiss  index.pkl
src/db/: database.py  models.py
src/interfaces/: api.py  auth.py
src/utils/: logger.py
tests/: test_api.py  test_tools.py
